--- a/Resoluções/Hello World.html
+++ b/Resoluções/Hello World.html
@@ -1,1 +1,17 @@
 
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>
+      Resolução: Hello World
+    </title>
+  </head>
+ 
+  <body>
+    module HelloWorld (hello) where
+    hello :: String
+    hello = "Hello, World!"
+  </body>
+  
+</html>
